Add paragraph to portrait

--- a/IWeb_Files/Kunstlerportrait.html
+++ b/IWeb_Files/Kunstlerportrait.html
@@ -81,6 +81,8 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
                 <p class="paragraph_style">Der erbauliche Betrachtungsaspekt gilt auch für ihre Malerei- und Grafikgenres, die sie seit ihrer Jugend parallel zu Plastik pflegte. Die freie kompositorische Gestaltungsweise bildete zunehmend auch hier ihren Schaffensgrund. Hierin fühlte sie sich besonders der Bewegung des “Blauen Reiter” um Wassily Kandinski verwandt, die diese Schaffensperspektive zu Beginn des 20sten Jahrhunderts wesentlich mit begründete.<br /></p>
                 <p class="paragraph_style"><br /></p>
                 <p style="padding-bottom: 0pt; " class="paragraph_style">In diesem Sinne besonders charakteristisch sind ihre hellen, farbenfrohen Bildkompositionen in Ölmalerei, in denen der Farbklang bereits selbst einen Eigenwert besitzt. Sie selbst sagt dazu: “Ich setze mit grosszügigen, für mich klangvollen Linien an. Das Bild entwickelt sich. Das Ergebnis überrascht mich in der Regel selbst.”</p>
+                <p class="paragraph_style"><br /></p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style">Gisela Stamer-Roßberg ist 2018 im Alter von 76 Jahren in Kühlungsborn verstorben.</p>
               </div>
             </div>
           </div>
