Adjust contact to correct art club

--- a/IWeb_Files/Kontakt.html
+++ b/IWeb_Files/Kontakt.html
@@ -60,10 +60,10 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
             <div class="text-content graphic_textbox_layout_style_default_External_412_171" style="padding: 0px;">
               <div class="style" style="text-align: center;">
                 <p style="padding-top: 0pt;" class="paragraph_style_4">Kontakt<br /></p>
-                <p class="paragraph_style_5">Kunstverein zu Rostock e.V.<br /></p>
-                <p class="paragraph_style_5">Amberg 13<br /></p>
+                <p class="paragraph_style_5">Kunst.Werke.Rostock. e.V.<br /></p>
+                <p class="paragraph_style_5">Kröpeliner Straße 53<br /></p>
                 <p class="paragraph_style_5">18055 Rostock<br /></p>
-                <p class="paragraph_style_5">info@kunstverein-rostock.de<br /></p>
+                <p class="paragraph_style_5">kunstwerkerostock@gmail.com<br /></p>
               </div>
             </div>
           </div>
@@ -72,9 +72,9 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
              <div class="style" style="text-align: center;">
                 <p style="padding-top: 0pt; " class="paragraph_style_4">Impressum<br /></p>
                 <p class="paragraph_style_5">Inhaltliche Verantwortung: Mark Stamer<br /></p>
-                <p class="paragraph_style_5">Kontaktinformation: Himmelstr. 33, 22299 Hamburg<br /></p>
-                <p class="paragraph_style_5">Fotos: Hartwig Stamer, Gisela Stamer-Roßberg<br /></p>
-                <p class="paragraph_style_5">Kunstobjekte: Gisela Stamer-Roßberg<br /></p>
+                <p class="paragraph_style_5">Kontaktinformation: Himmelstr. 33, 22299 Hamburg</p>
+                <p class="paragraph_style_5">Fotos: Hartwig Stamer, Gisela Stamer-Roßberg</p>
+                <p class="paragraph_style_5">Kunstobjekte: Gisela Stamer-Roßberg</p>
               </div>
             </div>
           </div>
